@@ -1,8 +1,18 @@
 package de.schlund.pfixxml.resources;
 
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
+import java.util.ArrayList;
+import java.util.Enumeration;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Properties;
 
 import org.apache.log4j.Logger;
 import org.w3c.dom.Document;
@@ -11,6 +21,7 @@ import org.w3c.dom.Node;
 import de.schlund.pfixcore.util.ModuleInfo;
 import de.schlund.pfixxml.IncludeDocument;
 import de.schlund.pfixxml.IncludeDocumentFactory;
+import de.schlund.pfixxml.config.GlobalConfig;
 import de.schlund.pfixxml.util.URIParameters;
 import de.schlund.pfixxml.util.XPath;
 import de.schlund.pfixxml.util.XsltProvider;
@@ -26,6 +37,61 @@ public class DynamicResourceProvider implements ResourceProvider {
     
     private static String DYNAMIC_SCHEME = "dynamic";
     private static String[] supportedSchemes = {DYNAMIC_SCHEME};
+    
+    private Map<String, List<String>> commonOverrideDirs = new HashMap<String, List<String>>();
+    
+    public DynamicResourceProvider() {
+    	readCommonOverrideConfig();
+    }
+    
+    private void readCommonOverrideConfig() {
+    	URL docrootURL = GlobalConfig.getDocrootAsURL();
+    	URL propURL;
+		try {
+			propURL = new URL(docrootURL, "projects/common/conf/common-override.conf");
+		} catch (MalformedURLException x) {
+			String msg = "Illegal URL for common override configuration";
+			LOG.error(msg + ": " + x.getMessage(), x);
+			throw new RuntimeException(msg, x);
+		}
+    	InputStream in = null;
+		try {
+			in = propURL.openStream();
+		} catch (FileNotFoundException x) {
+			//ignore because configuration file is optional
+		} catch (IOException x) {
+			String msg = "Can't read common override configuration";
+			LOG.error(msg + ": " + x.getMessage(), x);
+			throw new RuntimeException(msg, x);
+		}
+    	if(in != null) {
+    		Properties props = new Properties();
+    		try {
+    			props.load(in);
+    		} catch (IOException x) {
+    			String msg = "Can't read common override configuration";
+    			LOG.error(msg + ": " + x.getMessage(), x);
+    			throw new RuntimeException(msg, x);
+    		}
+    		LOG.info("Read common override configuration");
+    		Enumeration<?> e = props.propertyNames();
+    		while(e.hasMoreElements()) {
+    			String project = (String)e.nextElement();
+    			String value = props.getProperty(project);
+    			String[] dirs = value.split("\\s*,\\s*");
+    			List<String> dirList = new ArrayList<String>();
+    			for(String dir:dirs) {
+    				if(dir.startsWith("/")) dir = dir.substring(1);
+    				if(dir.endsWith("/")) dir = dir.substring(0, dir.length()-1);
+    				dirList.add(dir);
+    				if(LOG.isInfoEnabled())
+    					LOG.info("Add common override directory '" + dir +"' for project '" + project + "'");
+    			}
+    			commonOverrideDirs.put(project, dirList);
+    		}
+    	}
+    
+    }
     
     public String[] getSupportedSchemes() {
         return supportedSchemes;
@@ -71,6 +137,29 @@ public class DynamicResourceProvider implements ResourceProvider {
             }
         }
             
+        //search in common override directories
+        List<String> overrideDirs = commonOverrideDirs.get(project);
+        if(overrideDirs != null) {
+        	for(String overrideDir:overrideDirs) {
+		        for(String theme:themes) {
+		            try {
+		                String uriPath = uri.getPath();
+		                uriPath = uriPath.replace("THEME", theme);
+		                URI  prjUri = new URI("pfixroot:/"+overrideDir+uriPath);
+		                if(LOG.isDebugEnabled()) LOG.debug("trying "+prjUri.toString());
+		                Resource resource = ResourceUtil.getFileResource(prjUri);
+		                resource.setOriginatingURI(uri);
+		                if(resource.exists()) {
+		                    if(part == null) return resource;
+		                    if(containsPart(resource, part)) return resource;
+		                }
+		            } catch(URISyntaxException x) {
+		                throw new ResourceProviderException("Error while searching common override resource: " + uri, x);
+		            }
+		        }
+        	}
+        }
+        
         //search in common
         for(String theme:themes) {
             try {
